[project]
name = "autocycle"
version = "0.1.0"
description = "Autonomous Riderless Bike Project"
license = {text = "MIT License"}
readme = "README.md"
authors = [
    {name = "Vihaan Shah", email = "vihaan.shah@uconn.edu"},
    {name = "Kalin Kochnev", email = "kalin.kochnev@uconn.edu"},
]
maintainers = [
    {name = "Vihaan Shah", email = "vihaan.shah@uconn.edu"},
    {name = "Kalin Kochnev", email = "kalin.kochnev@uconn.edu"},
]
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "opencv-contrib-python>4.6",
  "pillow",
  "requests>=2.31,<3",
  "rerun-sdk>=0.20.0",
  "timm==0.9.11",
  "torch==2.2.2",              # This must match the version captured in pixi.toml
  "transformers",
]
keywords = ["bike", "autonomous", "robotics", "underactuated"]

[tool.setuptools.packages]
find = {include = ["autocycle*"]}

[project.scripts]
autocycle = "autocycle:main"

[project.urls]
Source = "https://github.com/uconn-hacklab/autocycle"
Tracker = "https://github.com/uconn-hacklab/autocycle/issues"
Documentation = "https://github.com/uconn-hacklab/autocycle"
