[project]
name = "autocycle"
version = "0.1.0"
description = "Autonomous Riderless Bike Project"
license = {text = "MIT License"}
readme = "README.md"
authors = [
    {name = "Vihaan Shah", email = "vihaan.shah@uconn.edu"},
    {name = "Kalin Kochnev", email = "kalin.kochnev@uconn.edu"},
]
maintainers = [
    {name = "Vihaan Shah", email = "vihaan.shah@uconn.edu"},
    {name = "Kalin Kochnev", email = "kalin.kochnev@uconn.edu"},
]
requires-python = ">=3.12"
dependencies = []
keywords = ["bike", "autonomy", "robotics"]

[project.urls]
Source = "https://github.com/uconn-hacklab/autocycle"
Tracker = "https://github.com/uconn-hacklab/autocycle/issues"
Documentation = "https://github.com/uconn-hacklab/autocycle"

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = []

[project.optional-dependencies]
dev = [
  "sphinx",
  "sphinx-autobuild",
  "sphinx-favicon",
  "sphinx-mathjax-offline",
  "furo",
  "myst-parser",
  "sphinx-copybutton",
  "sphinx-design",
  "sphinx-inline-tabs",
  "sphinx-tabs",
]